--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script type="module" src="/js/index.js"></script>
+  <link rel="stylesheet" href="/css/main.css">
   <title>Catstagram</title>
 </head>
 
